gen/LinearLanguageParser.java
// Generated from /Users/cristhiancamilogomezneira/Documents/proyectos/linear language/grammar/LinearLanguage.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinearLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		BOOLEAN=39, ID=40, SKIP_=41, INTEGER=42, STRING=43, SPACES=44, NEWLINE=45;
	public static final int
		RULE_program = 0, RULE_func_call = 1, RULE_parameter = 2, RULE_deduct = 3, 
		RULE_deduct_rule = 4, RULE_type_def = 5, RULE_var_def = 6, RULE_val_id = 7, 
		RULE_func_def = 8, RULE_lin_expr = 9, RULE_log_op = 10, RULE_log_term_op = 11, 
		RULE_value = 12, RULE_transformed = 13, RULE_assignation = 14, RULE_func_expr = 15, 
		RULE_proc_call = 16, RULE_lin_func_expr = 17, RULE_deduct_def = 18, RULE_term_id = 19, 
		RULE_proc_def = 20, RULE_proc_body = 21, RULE_stmt = 22, RULE_type = 23, 
		RULE_type_var = 24, RULE_operator = 25, RULE_literal = 26, RULE_id = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "func_call", "parameter", "deduct", "deduct_rule", "type_def", 
			"var_def", "val_id", "func_def", "lin_expr", "log_op", "log_term_op", 
			"value", "transformed", "assignation", "func_expr", "proc_call", "lin_func_expr", 
			"deduct_def", "term_id", "proc_def", "proc_body", "stmt", "type", "type_var", 
			"operator", "literal", "id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "','", "')'", "'['", "']'", "'->'", "'cut'", "'&'", 
			"'first (+)'", "'second (+)'", "'(x)'", "'-&'", "'='", "'def'", "'func'", 
			"'-o'", "'(+)'", "'not'", "'!'", "'?'", "'deduct'", "'-|'", "'proc'", 
			"'{'", "'}'", "'return'", "'print('", "');'", "'string'", "'int'", "'bool'", 
			"'float'", "'+'", "'-'", "'*'", "'**'", "'/'", null, null, null, null, 
			null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "BOOLEAN", "ID", "SKIP_", "INTEGER", "STRING", "SPACES", 
			"NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LinearLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinearLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Type_defContext> type_def() {
			return getRuleContexts(Type_defContext.class);
		}
		public Type_defContext type_def(int i) {
			return getRuleContext(Type_defContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(LinearLanguageParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LinearLanguageParser.NEWLINE, i);
		}
		public List<Func_defContext> func_def() {
			return getRuleContexts(Func_defContext.class);
		}
		public Func_defContext func_def(int i) {
			return getRuleContext(Func_defContext.class,i);
		}
		public List<Proc_defContext> proc_def() {
			return getRuleContexts(Proc_defContext.class);
		}
		public Proc_defContext proc_def(int i) {
			return getRuleContext(Proc_defContext.class,i);
		}
		public List<Var_defContext> var_def() {
			return getRuleContexts(Var_defContext.class);
		}
		public Var_defContext var_def(int i) {
			return getRuleContext(Var_defContext.class,i);
		}
		public List<Func_callContext> func_call() {
			return getRuleContexts(Func_callContext.class);
		}
		public Func_callContext func_call(int i) {
			return getRuleContext(Func_callContext.class,i);
		}
		public List<Deduct_defContext> deduct_def() {
			return getRuleContexts(Deduct_defContext.class);
		}
		public Deduct_defContext deduct_def(int i) {
			return getRuleContext(Deduct_defContext.class,i);
		}
		public List<DeductContext> deduct() {
			return getRuleContexts(DeductContext.class);
		}
		public DeductContext deduct(int i) {
			return getRuleContext(DeductContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(60);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__29:
					case T__30:
					case T__31:
					case T__32:
						{
						setState(56);
						type_def();
						setState(57);
						match(T__0);
						}
						break;
					case NEWLINE:
						{
						setState(59);
						match(NEWLINE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(70);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(68);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(65);
						func_def();
						}
						break;
					case 2:
						{
						setState(66);
						proc_def();
						}
						break;
					case 3:
						{
						setState(67);
						match(NEWLINE);
						}
						break;
					}
					} 
				}
				setState(72);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(77);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(73);
						var_def();
						setState(74);
						match(T__0);
						}
						break;
					case NEWLINE:
						{
						setState(76);
						match(NEWLINE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__14) | (1L << ID) | (1L << NEWLINE))) != 0)) {
				{
				setState(86);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(82);
					func_call();
					}
					break;
				case T__14:
					{
					setState(83);
					deduct_def();
					}
					break;
				case T__4:
					{
					setState(84);
					deduct();
					}
					break;
				case NEWLINE:
					{
					setState(85);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_func_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			id();
			setState(92);
			match(T__1);
			setState(93);
			parameter();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(94);
				match(T__2);
				setState(95);
				parameter();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(T__3);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(102);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(LinearLanguageParser.BOOLEAN, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameter);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(BOOLEAN);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeductContext extends ParserRuleContext {
		public Deduct_ruleContext deduct_rule() {
			return getRuleContext(Deduct_ruleContext.class,0);
		}
		public List<DeductContext> deduct() {
			return getRuleContexts(DeductContext.class);
		}
		public DeductContext deduct(int i) {
			return getRuleContext(DeductContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public DeductContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deduct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterDeduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitDeduct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitDeduct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeductContext deduct() throws RecognitionException {
		DeductContext _localctx = new DeductContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_deduct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(T__4);
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				{
				setState(110);
				deduct();
				}
				break;
			case ID:
				{
				setState(111);
				id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(114);
				match(T__2);
				setState(117);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(115);
					deduct();
					}
					break;
				case ID:
					{
					setState(116);
					id();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__5);
			setState(125);
			match(T__6);
			setState(126);
			deduct_rule();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Deduct_ruleContext extends ParserRuleContext {
		public Deduct_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deduct_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterDeduct_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitDeduct_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitDeduct_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Deduct_ruleContext deduct_rule() throws RecognitionException {
		Deduct_ruleContext _localctx = new Deduct_ruleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_deduct_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_defContext extends ParserRuleContext {
		public Type_varContext type_var() {
			return getRuleContext(Type_varContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Type_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterType_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitType_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitType_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_defContext type_def() throws RecognitionException {
		Type_defContext _localctx = new Type_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			type_var();
			setState(131);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_defContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public Val_idContext val_id() {
			return getRuleContext(Val_idContext.class,0);
		}
		public Var_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterVar_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitVar_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitVar_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_defContext var_def() throws RecognitionException {
		Var_defContext _localctx = new Var_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			type();
			setState(134);
			id();
			setState(135);
			match(T__13);
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case INTEGER:
			case STRING:
				{
				setState(136);
				literal();
				}
				break;
			case ID:
				{
				setState(137);
				val_id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Val_idContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Val_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterVal_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitVal_id(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitVal_id(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Val_idContext val_id() throws RecognitionException {
		Val_idContext _localctx = new Val_idContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_val_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_defContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Lin_exprContext lin_expr() {
			return getRuleContext(Lin_exprContext.class,0);
		}
		public Lin_func_exprContext lin_func_expr() {
			return getRuleContext(Lin_func_exprContext.class,0);
		}
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_func_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__14);
			setState(143);
			match(T__15);
			setState(144);
			id();
			setState(145);
			lin_expr();
			setState(146);
			match(T__16);
			setState(147);
			lin_func_expr();
			setState(148);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lin_exprContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<Log_term_opContext> log_term_op() {
			return getRuleContexts(Log_term_opContext.class);
		}
		public Log_term_opContext log_term_op(int i) {
			return getRuleContext(Log_term_opContext.class,i);
		}
		public List<Log_opContext> log_op() {
			return getRuleContexts(Log_opContext.class);
		}
		public Log_opContext log_op(int i) {
			return getRuleContext(Log_opContext.class,i);
		}
		public List<Lin_exprContext> lin_expr() {
			return getRuleContexts(Lin_exprContext.class);
		}
		public Lin_exprContext lin_expr(int i) {
			return getRuleContext(Lin_exprContext.class,i);
		}
		public Lin_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lin_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterLin_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitLin_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitLin_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lin_exprContext lin_expr() throws RecognitionException {
		Lin_exprContext _localctx = new Lin_exprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lin_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__1);
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(151);
				log_term_op();
				}
				break;
			}
			setState(154);
			type();
			setState(155);
			id();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__17))) != 0)) {
				{
				{
				setState(156);
				log_op();
				setState(164);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__18:
				case T__19:
				case T__20:
				case ID:
					{
					setState(158);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
					case 1:
						{
						setState(157);
						log_term_op();
						}
						break;
					}
					setState(160);
					type();
					setState(161);
					id();
					}
					break;
				case T__1:
					{
					setState(163);
					lin_expr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Log_opContext extends ParserRuleContext {
		public Log_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).enterLog_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinearLanguageListener ) ((LinearLanguageListener)listener).exitLog_op(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinearLanguageVisitor ) return ((LinearLanguageVisitor<? extends T>)visitor).visitLog_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Log_opContext log_op() throws RecognitionException {
		Log_opContext _localctx = new Log_opContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_log_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__17))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
